# open-msupply-actions-test

./: .gitignore  Dockerfile  async-dataloader.patch  hash.txt  package.json
server/: Cargo.toml
server/cli/src/: cli.rs
server/configuration/: example.yaml
server/dashboard_ai/: Cargo.toml
server/dashboard_ai/assets/: dashboardexample1.json  dashboardexample2.json  dashboardexample3.json  dashboardexample4.json  schema.sql
server/dashboard_ai/src/: create_dashboard.rs  gemini.rs  grafana.rs  lib.rs
server/graphql/: Cargo.toml  lib.rs
server/graphql/core/: Cargo.toml
server/graphql/core/src/: lib.rs
server/graphql/core/src/loader/: diagnosis.rs  insurance_provider.rs  invoice.rs  invoice_line.rs  loader_registry.rs  name.rs  name_insurance_join.rs  name_row.rs  patient.rs  program.rs  requisition.rs  store.rs  user.rs
server/graphql/general/: Cargo.toml
server/graphql/general/src/: lib.rs
server/graphql/general/src/queries/: me.rs
server/graphql/invoice/src/: lib.rs
server/graphql/types/: Cargo.toml
server/graphql/types/src/types/: invoice_query.rs  user.rs
server/repository/: Cargo.toml
server/repository/src/db_diesel/: mod.rs  name_insurance_join_row.rs  storage_connection.rs
server/server/: Cargo.toml
server/server/src/: lib.rs  main.rs
server/server/src/sync/: remote_data_synchroniser.rs
server/service/src/: service_provider.rs
server/service/src/backend_plugin/types/: mod.rs
server/service/src/report/: report_service.rs
server/service/src/sync/: mod.rs
server/service/src/sync/translations/: invoice_line.rs  (+1 more)
(+27 files in other folders)
