[profile.github-workflow]
inherits = "dev"
opt-level = "z"
debug = false
strip = true
incremental = false
codegen-units = 256

[workspace]

members = [
    "android",
    "report_builder",
    "repository",
    "graphql",
    "server",
    "service",
    "util",
    "graphql/core",
    "graphql/types",
    "graphql/requisition",
    "graphql/requisition_line",
    "graphql/stocktake",
    "graphql/stocktake_line",
    "graphql/invoice",
    "graphql/invoice_line",
    "graphql/location",
    "graphql/general",
    "graphql/batch_mutations",
    "cli"
]
